# advent-of-code

./: Cargo.toml  README.md
src/: main.rs
src/engine/: indeed.rs
src/solutions/: day_1.rs  mod.rs  traits.rs  types.rs
src/solutions/day_1/: solution.rs
src/solutions/day_2/: mod.rs  rock_paper_scissors.rs  solution.rs
src/solutions/day_3/: solution.rs
src/solutions/day_4/: solution.rs
src/solutions/day_5/: solution.rs
src/solutions/day_6/: solution.rs
