[package]
name = "job-crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["postgres"] }
dotenv = "0.15.0"
reqwest = "0.11.18"
scraper = "0.17.1"
serde = {version = "1.0.183", features = ["derive"] }
tokio = { version = "1.31.0", features = ["full"] }

